--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-01-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* vignettes/Rcpp-package.Rnw: Updates for upcoming release
+
 2014-01-28  Dirk Eddelbuettel  <edd@debian.org>
 
 	* vignettes/Rcpp-FAQ.Rnw: Some updates for upcoming release
