Embedded R code chunks in sourceCpp are now executed within the working directory of the C++ source file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014-01-31  JJ Allaire  <jj@rstudio.org>
+
+        * R/Attributes.R: Embedded R code chunks in sourceCpp are
+        now executed within the working directory of the C++ source
+        file.
+
 2014-01-31  Dirk Eddelbuettel  <edd@debian.org>
 
 	* man/Rcpp.package.skeleton.Rd: Also updated
