--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2014-01-31  Dirk Eddelbuettel  <edd@debian.org>
+
+	* vignettes/Rcpp-FAQ.Rnw: Render code with background boxen
+	* vignettes/Rcpp-package.Rnw: Idem
+	* vignettes/Rcpp-modules.Rnw: Idem 
+	* vignettes/Rcpp-extending.Rnw: Idem 
+	* vignettes/Rcpp-sugar.Rnw: Idem 
+
 2014-01-28  Dirk Eddelbuettel  <edd@debian.org>
 
 	* vignettes/Rcpp-FAQ.Rnw: Some updates for upcoming release
